samples/_failures_safe/1761071531_282863_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1604a3b9.c:156:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  156 | int main
      | ^~~
